카운팅 코드 추가