@@ -13,12 +13,12 @@ public class EntityUtils {
     private final static Gson gson = new Gson();
 
     //methods to extract message content data
-    public static HashMap<String, Object> getProfile(Map<String, Object> messageContent) {
-        return (gson.fromJson((String) ((LinkedTreeMap) ((ArrayList) messageContent.get("bdy")).get(0)).get("profile"), HashMap.class));
+    public static HashMap getProfile(Map<String, Object> messageContent) {
+        return (gson.fromJson((String) ((LinkedTreeMap<?, ?>) ((ArrayList<?>) messageContent.get("bdy")).getFirst()).get("profile"), HashMap.class));
     }
 
     public static String getUid(Map<String, Object> messageContent) {
-        return ((LinkedTreeMap) ((ArrayList) messageContent.get("bdy")).get(0)).get("uid").toString();
+        return ((LinkedTreeMap<?, ?>) ((ArrayList<?>) messageContent.get("bdy")).getFirst()).get("uid").toString();
     }
 
     public static String getNickname(Map<String, Object> messageContent) {
@@ -29,11 +29,11 @@ public class EntityUtils {
     }
 
     public static String getMsg(Map<String, Object> messageContent) {
-        return ((LinkedTreeMap) ((ArrayList) messageContent.get("bdy")).get(0)).get("msg").toString();
+        return ((LinkedTreeMap<?, ?>) ((ArrayList<?>) messageContent.get("bdy")).getFirst()).get("msg").toString();
     }
 
     public static String getDonationType(Map<String, Object> messageContent) {
-        HashMap<String, Object> extras = (HashMap<String, Object>) gson.fromJson((String) ((LinkedTreeMap) ((ArrayList) messageContent.get("bdy")).get(0)).get("extras"), HashMap.class);
+        HashMap<String, Object> extras = (HashMap<String, Object>) gson.fromJson((String) ((LinkedTreeMap<?, ?>) ((ArrayList<?>) messageContent.get("bdy")).getFirst()).get("extras"), HashMap.class);
 
         String donationType = null;
         if (extras.get("donationType") != null) {
@@ -48,7 +48,7 @@ public class EntityUtils {
     }
 
     public static String getCost(Map<String, Object> messageContent) {
-        HashMap<String, Object> extras = (HashMap<String, Object>) gson.fromJson((String) ((LinkedTreeMap) ((ArrayList) messageContent.get("bdy")).get(0)).get("extras"), HashMap.class);
+        HashMap<String, Object> extras = (HashMap<String, Object>) gson.fromJson((String) ((LinkedTreeMap<?, ?>) ((ArrayList<?>) messageContent.get("bdy")).getFirst()).get("extras"), HashMap.class);
 
         String cost = null;
         if (extras.get("payAmount") != null) {
@@ -62,7 +62,7 @@ public class EntityUtils {
     }
 
     public static String getGiftCount(Map<String, Object> messageContent) {
-        HashMap<String, Object> extras = (HashMap<String, Object>) gson.fromJson((String) ((LinkedTreeMap) ((ArrayList) messageContent.get("bdy")).get(0)).get("extras"), HashMap.class);
+        HashMap<String, Object> extras = (HashMap<String, Object>) gson.fromJson((String) ((LinkedTreeMap<?, ?>) ((ArrayList<?>) messageContent.get("bdy")).getFirst()).get("extras"), HashMap.class);
         String giftCount = null;
         if (extras.get("quantity") != null) {
             giftCount = extras.get("quantity").toString();
@@ -71,7 +71,7 @@ public class EntityUtils {
     }
 
     public static String getSelectType(Map<String, Object> messageContent) {
-        HashMap<String, Object> extras = (HashMap<String, Object>) gson.fromJson((String) ((LinkedTreeMap) ((ArrayList) messageContent.get("bdy")).get(0)).get("extras"), HashMap.class);
+        HashMap<String, Object> extras = (HashMap<String, Object>) gson.fromJson((String) ((LinkedTreeMap<?, ?>) ((ArrayList<?>) messageContent.get("bdy")).getFirst()).get("extras"), HashMap.class);
         String getSelectType = null;
         if (extras.get("getSelectType") != null) {
             getSelectType = extras.get("getSelectType").toString();
